2005-09-22  Steffen Macke <sdteffen@gmail.com>

	* makefile.msc:
	* shpdelaunay.c: Added new Delaunay triangulation frontend
	
2005-09-07  Steffen Macke <sdteffen@gmail.com>

	* COPYING:
	* makefile.msc:
	* README:
	* shpvoronoi.c:
	* shpvoronoi.h: Started the development; program is working but
	needs code clean up